# platform-god

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCS_INDEX.md  Dockerfile  PGInspect.sh  README.md  SECURITY.md  VERIFICATION_REPORT.md  api_smoke_results.txt  api_smoke_tests.sh  api_smoke_tests_v2.sh  backup_dr_procedures.md  docker-compose.yml  openapi_spec.json  pip_audit_report.json  pyproject.toml
.github/workflows/: ci.yml  coverage.yml  lint.yml  publish.yml  test.yml
.serena/: project.yml
.serena/memories/: env-files-best-practices.md  project_overview.md  (+3 more)
.swarm-coordination/: agent-a-report.md
analysis_output/: commands_log.txt  findings.json
assets/: _MANIFEST.json
configs/: pg.default.yaml  pg.dev.yaml  pg.prod.yaml  pg.staging.yaml
docs/: AGENTS.md  CHAINS.md  CLI.md  GETTING_STARTED.md
prompts/: README.md
repo_reports/: AI_AGENTS_REPORT.md  CRM_PLATFORMS_REPORT.md  DEV_TOOLS_REPORT.md  FRAMEWORKS_REPORT.md  MOBILE_APPS_REPORT.md  REPOSITORY_INTELLIGENCE_SUMMARY.md  WEB_APPS_REPORT.md  post_hardening_report.json
schemas/: registry.sql
tests/: __init__.py  conftest.py  test_agent_registry.py  test_api_integration.py  test_artifacts.py  test_auth_jwt.py  test_automations.py  test_cli.py  test_core_models.py  test_execution_harness.py  test_llm_client.py  test_middleware_rate_limit.py  test_middleware_size_limit.py  test_middleware_validation.py  test_notifications.py  test_orchestrator.py  test_registry_storage.py  test_state_manager.py
ui/: README.md  index.js  index.js.bak2  package.json
(+122 files in other folders)
