[project]
name = "platform-god"
version = "0.1.0"
description = "Deterministic agent-driven repository governance system"
requires-python = ">=3.11"
dependencies = [
    "typer==0.21.1",
    "rich==14.2.0",
    "watchdog==6.0.0",
    "pyyaml==6.0.3",
    "python-dotenv==1.2.1",
    "pydantic==2.12.5",
    "jsonschema==4.26.0",
    "GitPython==3.1.46",
    "networkx==3.6.1",
    "httpx==0.28.1",
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "websockets==16.0",
    "tenacity==9.1.2",
    "orjson==3.11.5",
    "jinja2==3.1.6",
    "markdown==3.10",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-asyncio>=0.23.0",
]
all = [
    "platform-god[dev]",
]

[project.scripts]
pgod = "platform_god.cli:main"
platform-god = "platform_god.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/platform_god"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
